syntax = "proto3";

import "common/base_response.proto";
import "buf/validate/validate.proto";

package cart;

option go_package = "github.com/fahrillrizal/ecommerce-grpc/pb/cart";

service CartService {
    rpc AddToCart (AddToCartRequest) returns (AddToCartResponse);
    rpc ListCart (ListCartRequest) returns (ListCartResponse);
    rpc DeleteCart (DeleteCartRequest) returns (DeleteCartResponse);
    rpc UpdateCartQty (UpdateCartQtyRequest) returns (UpdateCartQtyResponse);
}

message AddToCartRequest {
    int64 product_id = 1 [(buf.validate.field).int64.gt = 0];
    int64 quantity = 2 [(buf.validate.field).int64.gt = 0];
}

message AddToCartResponse {
    common.BaseResponse base_response = 1;
    string id = 2;
}

message ListCartRequest {}

message ListCartResponseItem {
    int64 product_id = 1;
    string product_name = 2;
    string product_image_url = 3;
    double product_price = 4;
    int32 quantity = 5;
}

message ListCartResponse {
    common.BaseResponse base_response = 1;
    repeated ListCartResponseItem items = 2;
}

message DeleteCartRequest {
    string cart_id = 1 [(buf.validate.field).string.min_len = 1];
}

message DeleteCartResponse {
    common.BaseResponse base_response = 1;
}

message UpdateCartQtyRequest {
    string cart_id = 1 [(buf.validate.field).string.min_len = 1];
    int64 new_quantity = 2 [(buf.validate.field).int64.gte = 0];
}

message UpdateCartQtyResponse {
    common.BaseResponse base_response = 1;
}
